--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@sanity/block-content-to-react": "^2.0.7",
     "autoprefixer": "^10.2.4",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
